<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string-array name="navigation_drawer_items_array">
        <item>Lugares favoritos</item>
        <item>Puntos de carga cercanos</item>
        <item>Tarifas</item>
        <item>Recorridos</item>
        <item>Configuración</item>
    </string-array>
    <string name="app_name">MyBus</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="closest_recharge_points">Puntos de recarga cercanos</string>
    <string name="confirm">Confirmar</string>
    <string name="deletion_confirmation">¿Quiere borrar esta ubicación?</string>
    <string name="favorites_list_purge">Vaciar lista</string>
    <string name="btn_show_on_map">Mostrar en mapa</string>
    <string name="label_check_favorites">Mostrar favoritos en el mapa</string>
    <string name="label_check_stations">Mostrar puntos de carga en el mapa</string>
    <string name="reselect_message">¿Desea reseleccionar el punto?</string>
    <string name="Select">Seleccionar</string>
    <string name="Origin">Origen</string>
    <string name="Destination">Destino</string>
    <string name="Destinationlocation">Ubicación de destino</string>
    <string name="Originlocation">Ubicación de origen</string>
    <string name="Favorites">Favoritos</string>
    <string name="MarkerOptions">Opciones del Marcador</string>
    <string name="Buses">Colectivos</string>
    <string name="action_bar_show_map">Mostrar mapa</string>
    <string name="FavName">Nombre del favorito</string>
    <string name="Time">Tiempo</string>
    <string name="Km">Km.</string>
    <string name="Distance">Dist.</string>
    <string name="Caminar">Caminar</string>
    <string name="HaciaParada">hacia</string>
    <string name="Tomar">Tomar </string>
    <string name="Descender">Descender en</string>
    <string name="InfoRecorrido">Informacion de Recorrido</string>
    <string name="CargandoRuta">"Cargando ruta..."</string>
    <string name="NoResults">No se encontraron resultados para esta búsqueda</string>
    <string name="warning_trash_favorites">¿Realmente desea vaciar la lista de favoritos?</string>
    <string name="CaminarHasta">Caminar hasta</string>
    <string name="MiPosicionActual">Mi posición actual</string>
    <string name="Yo">Yo</string>
    <string name="PuntoFueraDeRango">Este punto está fuera de rango</string>
    <string name="Minutos">Minutos</string>
    <string name="Kms">Kms.</string>
    <string name="Minutos2">Min.</string>
    <string name="recharge_point_schedule">"Horario: "</string>
    <string name="mode_recharge_stations">Modo de mapa: puntos de recarga</string>
    <string name="recharge_stations">Puntos de recarga</string>
    <string name="map_failure_warning">No se puede crear el mapa</string>
    <string name="marker_loading">Buscando Ubicación...</string>
    <string name="server_connection_failure_notice">No se puede conectar con el servidor</string>
    <string name="queried_address_failure">No hay resultados para el domicilio solicitado</string>
    <string name="bus_stop">Parada</string>
    <string name="bus_line">"Línea "</string>
    <string name="line_start">(principio)</string>
    <string name="line_end">(fin)</string>
    <string name="favorites_list_empty">No has creado ubicaciones favoritas aún.</string>
    <string name="correct_value_origin">Ingrese un valor correcto para el origen o toque el mapa</string>
    <string name="correct_value_destination">Ingrese un valor correcto para el destino o toque el mapa</string>
    <string name="org_dest_must_completed">Los puntos de origen y destino deben estar ingresados</string>
    <string name="new_favorite_added">Nuevo favorito agregado</string>
    <string name="char_min">El nombre debe tener como minimo 3 caracteres</string>
    <string name="complete_markers">Deben estar ingresados el origen y el destino para el intercambio</string>
    <string name="switch_complete">Intercambio realizado</string>
    <string name="IngreseOrigen">"Ingrese dirección origen"</string>
    <string name="IngreseDestino">"Ingrese dirección destino"</string>
    <string name="BuscandoDireccion">Buscando Direccion...</string>
    <!--New App Dialog -->
    <string name="new_app_package">com.mybus</string>
    <string name="warning_text">IMPORTANTE: Hay una nueva aplicación totalmente renovada.\nLa aplicación que estas utilizando dejará de funcionar el 30/11/2016</string>
</resources>
