<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:layout_weight="1"
        android:gravity="center" >

        <TextView
            android:id="@+id/tv_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Buses"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relative_base"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1" >

        <ListView
            android:id="@+id/lv_results"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible" >

        </ListView>

        <ProgressBar
            android:id="@+id/pb_loading"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true" />

        <TextView
            android:id="@+id/tv_noresults"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/NoResults"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="gone" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_loadingroute"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="3dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone" >

        <ProgressBar
            android:id="@+id/loadingbar_map"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="25dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CargandoRuta"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

</LinearLayout>
